some more theory and plots

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -9,13 +9,6 @@
   publisher={Wiley Online Library}
 }
 
-@book{fahrmeir2013multivariate,
-  title={Multivariate statistical modelling based on generalized linear models},
-  author={Fahrmeir, Ludwig and Tutz, Gerhard},
-  year={2013},
-  publisher={Springer Science \& Business Media}
-}
-
 @article{diaconis1979conjugate,
   title={Conjugate priors for exponential families},
   author={Diaconis, Persi and Ylvisaker, Donald},
@@ -676,4 +669,121 @@ outbreak in Germany},
   pages={423--498},
   year={2011},
   publisher={Wiley Online Library}
+}
+
+@article{doane2011measuring,
+  title={Measuring skewness: a forgotten statistic?},
+  author={Doane, David P and Seward, Lori E},
+  journal={Journal of statistics education},
+  volume={19},
+  number={2},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
+@article{wilkins1944note,
+  title={A note on skewness and kurtosis},
+  author={Wilkins, J Ernest},
+  journal={The Annals of Mathematical Statistics},
+  volume={15},
+  number={3},
+  pages={333--335},
+  year={1944},
+  publisher={JSTOR}
+}
+
+@article{decarlo1997meaning,
+  title={On the meaning and use of kurtosis.},
+  author={DeCarlo, Lawrence T},
+  journal={Psychological methods},
+  volume={2},
+  number={3},
+  pages={292},
+  year={1997},
+  publisher={American Psychological Association}
+}
+
+@article{akaike1974new,
+  title={A new look at the statistical model identification},
+  author={Akaike, Hirotugu},
+  journal={IEEE transactions on automatic control},
+  volume={19},
+  number={6},
+  pages={716--723},
+  year={1974},
+  publisher={Ieee}
+}
+
+@article{spiegelhalter2014deviance,
+  title={The deviance information criterion: 12 years on},
+  author={Spiegelhalter, David J and Best, Nicola G and Carlin, Bradley P and Van der Linde, Angelika},
+  journal={Journal of the Royal Statistical Society: Series B: Statistical Methodology},
+  pages={485--493},
+  year={2014},
+  publisher={JSTOR}
+}
+
+@article{watanabe2010asymptotic,
+  title={Asymptotic equivalence of Bayes cross validation and widely applicable information criterion in singular learning theory.},
+  author={Watanabe, Sumio and Opper, Manfred},
+  journal={Journal of machine learning research},
+  volume={11},
+  number={12},
+  year={2010}
+}
+
+@article{pettit1990conditional,
+  title={The conditional predictive ordinate for the normal distribution},
+  author={Pettit, LI},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={52},
+  number={1},
+  pages={175--184},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{nelder1972generalized,
+  title={Generalized linear models},
+  author={Nelder, John Ashworth and Wedderburn, Robert WM},
+  journal={Journal of the Royal Statistical Society: Series A (General)},
+  volume={135},
+  number={3},
+  pages={370--384},
+  year={1972},
+  publisher={Wiley Online Library}
+}
+
+@article{yong2018loo,
+  title={LOO and WAIC as model selection methods for polytomous items},
+  author={Yong, Luo},
+  journal={arXiv preprint arXiv:1806.09996},
+  year={2018}
+}
+
+@article{cox1980discussion,
+  title={Discussion of ‘Sampling and Bayes’ inference in scientific modelling and robustness},
+  author={Cox, DR},
+  journal={JR Stat Soc Ser A},
+  volume={143},
+  pages={410},
+  year={1980}
+}
+
+@article{kullback1951information,
+  title={On information and sufficiency},
+  author={Kullback, Solomon and Leibler, Richard A},
+  journal={The annals of mathematical statistics},
+  volume={22},
+  number={1},
+  pages={79--86},
+  year={1951},
+  publisher={JSTOR}
+}
+
+@book{fahrmeir2016statistik,
+  title={Statistik: Der weg zur datenanalyse},
+  author={Fahrmeir, Ludwig and Heumann, Christian and K{\"u}nstler, Rita and Pigeot, Iris and Tutz, Gerhard},
+  year={2016},
+  publisher={Springer-Verlag}
 }
